corrected license info

--- a/app/src/main/res/raw/licenses.html
+++ b/app/src/main/res/raw/licenses.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Open Source Licenses</h1>
 <h2>Licensed under the Apache License, Version 2.0</h2>
-<h3>Copyright (c) 2011 The Android Open Source Project</h3>
+<h3>Copyright (c) The Android Open Source Project</h3>
 <ul>
     <li>com.android.support:design</li>
     <li>com.android.support:support-v4</li>
@@ -38,7 +38,7 @@
 </ul>
 <h3>Copyright (c) 2013 Adam Speakman</h3>
 <ul>
-    <li>de.psdev.licensesdialog:licensesdialog</li>
+    <li>https://github.com/adamsp/AndroidLicensesPage</li>
 </ul>
 
                                  <h2>Apache License
@@ -215,38 +215,5 @@
       defend, and hold each Contributor harmless for any liability
       incurred by, or claims asserted against, such Contributor by reason
       of your accepting any such warranty or additional liability.<br/>
-
-<h2>Licensed under the 3-Clause BSD License</h2>
-<h3>Copyright (c) 2007-2009, JSR305 expert group</h3>
-<ul>
-    <li>com.google.code.findbugs:jsr305</li>
-</ul>
-<h2>The 3-Clause BSD License</h2>
-SPDX short identifier: BSD-3-Clause<br/>
-https://opensource.org/licenses/BSD-3-Clause<br/>
-<br/>
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are met:<br/>
-<br/>
-    * Redistributions of source code must retain the above copyright notice,
-      this list of conditions and the following disclaimer.<br/>
-    * Redistributions in binary form must reproduce the above copyright notice,
-      this list of conditions and the following disclaimer in the documentation
-      and/or other materials provided with the distribution.<br/>
-    * Neither the name of the JSR305 expert group nor the names of its
-      contributors may be used to endorse or promote products derived from
-      this software without specific prior written permission.<br/>
-<br/>
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
-THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
-ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
-LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
-SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
-INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
-CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
-ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-POSSIBILITY OF SUCH DAMAGE.<br/>
 </body>
 </html>
