Added explicit info about keeping mnemonic seed safe

--- a/app/src/main/res/raw/help_create.html
+++ b/app/src/main/res/raw/help_create.html
@@ -15,9 +15,25 @@ In all cases you need to name your wallet and give it a password. The password i
 securing your wallet data on the device. Use a strong password - better a passphrase.
 
 <h2>New Address</h2>
-You need a new Monero Address.<br/>
-No need to enter additional info.
-
+You need a new Monero Address - no need to enter additional info.
+<h3>Take Note of your Mnemonic Seed!</h3>
+<p>
+    On the following screen you will find your 25-word "Mnemonic Seed".
+    This is the only data needed to recover your wallet at a later time
+    and gain full access to your funds.
+    Keeping this secure and private is very important, as it gives <em>anyone</em>
+    full access to your funds!
+</p>
+<p>
+    If you loose your wallet password, you can still recover your wallet with the mnemonic seed.
+</p>
+<p>
+    There is no way to recover it if it is lost! Your funds would be lost.
+    The mnemonic seed can also never be changed, and if it is stolen or otherwise compromised,
+    you will have to move your funds to new wallet (with a new mnemonic seed). Therefore, it is best
+    that you backup your mnemonic seed by writing it down and storing it in <em>multiple</em> safe
+    and secure places.
+</p>
 <h2>Recover from Seed</h2>
 You already have a Monero Address and want to recover the transactions from the blockchain.<br/>
 Enter your Seed in the field "Mnemonic Seed". If you know the block number of the first
