--- a/app/src/main/res/raw/help_details.html
+++ b/app/src/main/res/raw/help_details.html
@@ -15,24 +15,24 @@ Here you see the details of your wallet.
 <h2>Mnemonic Seed</h2>
 <p>
     Your 25-word "Mnemonic Seed". This is the only data needed to recover your wallet at a later
-    time and gain full access to your funds.
+    point and gain full access to your funds.
     Keeping this secure and private is very important, as it gives <em>anyone</em>
     full access to your funds!
 </p>
 <p>
-    If you loose your wallet password, you can still recover your wallet with the mnemonic seed.
+    If you lose your wallet password, you can still recover your wallet with the Mnemonic Seed.
 </p>
 <p>
-    There is no way to recover it if it is lost! Your funds would be lost.
-    The mnemonic seed can also never be changed, and if it is stolen or otherwise compromised,
-    you will have to move your funds to new wallet (with a new mnemonic seed). Therefore, it is best
-    that you backup your mnemonic seed by writing it down and storing it in <em>multiple</em> safe
+    There is no way to recover your Mnemonic Seed, if you lose it all your funds will be lost!
+    The Mnemonic Seed can also never be changed, and if it is stolen or otherwise compromised,
+    you will have to move your funds to new wallet (with a new Mnemonic Seed). Therefore, it is best
+    that you backup your Mnemonic Seed by writing it down and storing it in <em>multiple</em> safe
     and secure places.
 </p>
 
 <h2>Public Address</h2>
-This is your account number. You can use it to receive funds. A sender needs to know nothing
-more.
+This is your account number. You use it to receive funds. A sender needs to know nothing
+more than this address to send you Monero.
 
 <h2>View Key</h2>
 This key is required for creating a view-only wallet or for recovering from keys.
