donation+privacy policy screens + bugfixes

--- a/app/src/main/res/raw/licenses.html
+++ b/app/src/main/res/raw/licenses.html
@@ -10,7 +10,7 @@
 <h1>Open Source Licenses</h1>
 <h2>Licensed under the Apache License, Version 2.0</h2>
 <h3>monerujo (https://github.com/m2049r/xmrwallet)</h3>
-Copyright (c) m2049r et al.
+Copyright (c) 2017 m2049r et al.
 <h3>The Android Open Source Project</h3>
 <ul>
     <li>com.android.support:design</li>
