--- a/app/src/main/assets/licenses.html
+++ b/app/src/main/assets/licenses.html
@@ -43,6 +43,9 @@ Copyright (c) 2014 Dushyanth Maguluru
 <h3>AndroidLicensesPage (https://github.com/adamsp/AndroidLicensesPage)</h3>
 Copyright (c) 2013 Adam Speakman
 
+<h3>SwipeableRecyclerView (https://github.com/brnunes/SwipeableRecyclerView)</h3>
+Copyright (c) 2015 Bruno R. Nunes
+
 <h3>Apache License, Version 2.0, January 2004</h3>
 http://www.apache.org/licenses/<br/>
 <br/>
