Add UD license and add new domains to help.xml

--- a/app/src/main/assets/licenses.html
+++ b/app/src/main/assets/licenses.html
@@ -444,6 +444,8 @@ Copyright (c) 2017 muflihun.com
 Copyright (c) 2014 Nulab Inc
 <h3>slfj-nop - Simple Logging Facade for Java no-operation binding (https://www.slf4j.org/)</h3>
 Copyright (c) 2004-2017 QOS.ch
+<h3>resolution-java - Java library to resolve ENS & Unstoppable Domains</h3>
+Copyright (c) 2020 Unstoppable Domains
 <h3>The MIT License</h3>
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software
 and associated documentation files (the "Software"), to deal in the Software without restriction,
